[project]
name = "comfyui-load-image-with-cmd"
description = "Load image and partially workflow with javascript."
version = "1.0.0"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/shinich39/comfyui-load-image-with-cmd"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "shinich39"
DisplayName = "comfyui-load-image-with-cmd"
Icon = ""
